# data-agent

./: pyproject.toml  requirements.txt
data_engineering_agent/dataform_pipeline_agent/: main.py  pylint.out
data_engineering_agent/dataform_pipeline_agent/agent/: __init__.py  agent_executor.py  agent_state.py  tools_context.py
data_engineering_agent/dataform_pipeline_agent/agent/tasks/: ask_clarifications.py
data_engineering_agent/dataform_pipeline_agent/tools/: bigquery.py  dataform.py  vertex_ai.py
data_engineering_agent/dataform_pipeline_agent/utils/: config.py  prompt_loader.py  pydantic_schemas.py  tracers.py
